--- a/publications/hardin2020syscon.html
+++ b/publications/hardin2020syscon.html
@@ -23,7 +23,7 @@ require sophisticated algorithms and data structures,
 are subject to stringent accreditation/certification, and encourage
 hardware/software co-design approaches. We have conducted
 several experiments employing a state-of-the-art toolchain, due
-to Russinoff and O’Leary, and originally designed for use in
+to Russinoff and O'Leary, and originally designed for use in
 floating-point hardware verification, to determine its suitability
 for the creation of safety-critical/security-critical input filters.
 We focus first on software implementation, but extending to
