--- a/publications/mercer2021models.html
+++ b/publications/mercer2021models.html
@@ -2,7 +2,7 @@
 layout: publication
 authors: [E. Mercer, K. Slind, I. Amundson, D. Cofer, J. Babar, D. Hardin]
 title: "Synthesizing Verified Components for Cyber Assured Systems Engineering"
-info: MODELS, October 2021
+info: 24th International Conference on Model-Driven Engineering Languages and Systems (MODELS), October 2021
 link: "/publications/pdf/mercer2021MODELS.pdf"
 date: 2021-10-14 00:00:00
 projects: [CASE]
