--- a/projects/case.html
+++ b/projects/case.html
@@ -13,19 +13,14 @@ designing complex embedded computing systems. Cyber-resiliency means that the sy
 is tolerant to cyberattacks in the same way that safety-critical systems are tolerant to
 random faults - they recover and continue to execute their mission function.</p>
 
-<p>Collins Aerospace, Adventium, the University of New South Wales (Sydney), the University of Kansas, 
-and Kansas State University have teamed to provide a
-comprehensive solution to the design resiliency and tool integration objectives 
-of the CASE program.
-We have developed a model-based
-systems engineering environment called BriefCASE that
-allows engineers to address a range of properties
-and manage system complexity through compositional
-analysis, integrating formal methods at
-all levels of the design process.
-Our tools are based on the Architecture Analysis
-and Design Language (AADL) and extend
-the Open Source AADL Tool Environment (OSATE).<\p>
+<p>Collins Aerospace, Adventium, the University of New South Wales (Sydney), 
+the University of Kansas, and Kansas State University have teamed to provide 
+a comprehensive solution to the design resiliency and tool integration objectives 
+of the CASE program.  We have developed a model-based systems engineering environment 
+called BriefCASE that allows engineers to address a range of properties and manage 
+system complexity through compositional analysis, integrating formal methods at
+all levels of the design process.  Our tools are based on the Architecture Analysis
+and Design Language (AADL) and extend the Open Source AADL Tool Environment (OSATE).</p>
 	
 <p>The main innovations of the BriefCASE tools
 and methodology are:
@@ -57,7 +52,6 @@ the workflow, including requirements
 capture, component synthesis, verification,
 code generation, and the seL4 microkernel.</li>
 </ol></p>
-
 
 <p>Tools developed on the CASE project are available on <a href="https://github.com/loonwerks/formal-methods-workbench" target="_blank">github</a>. AADL models based on an experimental UAV application are available <a href="https://github.com/loonwerks/case-ta6-experimental-platform-models" target="_blank">here</a>. </p>
 
