--- a/projects/case.html
+++ b/projects/case.html
@@ -30,7 +30,8 @@ patterns to address cyber-resiliency
 requirements, including synthesis of highassurance
 components from formal specifications.</li>
 <li>Our MBSE environment can target different
-operating systems including the seL4 microkernel,
+operating systems including the 
+<a href="https://sel4.systems/" target="_blank">seL4 microkernel</a>,
 making its formal security guarantees
 easily accessible to developers. This
 ensures that the implementation produced
