--- a/projects/case.html
+++ b/projects/case.html
@@ -54,7 +54,18 @@ capture, component synthesis, verification,
 code generation, and the seL4 microkernel.</li>
 </ol></p>
 
-<p>Tools developed on the CASE project are available on <a href="https://github.com/loonwerks/formal-methods-workbench" target="_blank">github</a>. AADL models based on an experimental UAV application are available <a href="https://github.com/loonwerks/case-ta6-experimental-platform-models" target="_blank">here</a>. </p>
+<p>Tools developed on the CASE project are open-source and are available on GitHub.  
+<ul>
+<li> The AADL modeling and analysis tools are available <a href="https://github.com/loonwerks/formal-methods-workbench" target="_blank">here</a>. </li>
+<li> <a href="https://github.com/loonwerks/CASE/blob/master/TA5/make_fmide.bat" target="_blank">Installation script for Windows</a></li>
+<li> <a href="https://github.com/loonwerks/CASE/blob/master/TA5/make_fmide.sh" target="_blank">Installation script for Linux</a></li>
+<li> A vagrant script for configuring a virtual machine containing the both the modeling/analysis tools and the build environment for targeting seL4 are available <a href="https://github.com/loonwerks/CASE/tree/master/TA5/case-env" target="_blank">here</a>.</li>
+</ul></p>
+
+<p>
+AADL models based on an experimental UAV application are available <a href="https://github.com/loonwerks/case-ta6-experimental-platform-models" target="_blank">here</a>. </p>
+
+</ul></p>
 
 <p>This video provides a demonstration of the BriefCASE tool environment that we have developed.  It shows how to use the tools to address multiple cyber-resiliency requirements for a UAV mission computing system.</p>
 
