--- a/projects/case.html
+++ b/projects/case.html
@@ -56,10 +56,11 @@ code generation, and the seL4 microkernel.</li>
 
 <p>Tools developed on the CASE project are open-source and are available on GitHub.  
 <ul>
-<li> The AADL modeling and analysis tools are available <a href="https://github.com/loonwerks/formal-methods-workbench" target="_blank">here</a>. </li>
+<li> <a href="https://github.com/loonwerks/formal-methods-workbench" target="_blank">AADL modeling and analysis tools</a> </li>
 <li> <a href="https://github.com/loonwerks/CASE/blob/master/TA5/make_fmide.bat" target="_blank">Installation script for Windows</a></li>
 <li> <a href="https://github.com/loonwerks/CASE/blob/master/TA5/make_fmide.sh" target="_blank">Installation script for Linux</a></li>
-<li> A vagrant script for configuring a virtual machine containing the both the modeling/analysis tools and the build environment for targeting seL4 are available <a href="https://github.com/loonwerks/CASE/tree/master/TA5/case-env" target="_blank">here</a>.</li>
+<li> <a href="https://github.com/loonwerks/CASE/tree/master/TA5/case-env" target="_blank">Vagrant script for configuring a virtual machine containing the both the modeling/analysis tools and the build environment for targeting seL4</a></li>
+<li> <a href="https://github.com/loonwerks/formal-methods-workbench/tree/master/documentation/BriefCASE" target="_blank">User Guide for the BriefCASE tools</a></li>
 </ul></p>
 
 <p>
