--- a/projects/case.html
+++ b/projects/case.html
@@ -6,6 +6,10 @@ sort: 2018
 archive: no
 ---
 
+<div id="project-logo">
+<img src="/images/CASE.png" />
+</div>
+
 <p>The goal of DARPA's Cyber Assured Systems Engineering (CASE) program is to develop the
 necessary design, analysis and verification tools to allow system engineers to design-in
 cyber resiliency and manage tradeoffs as they do the other nonfunctional properties when
