--- a/publications/cofer2022secpriv.html
+++ b/publications/cofer2022secpriv.html
@@ -6,6 +6,7 @@ info: IEEE Security and Privacy, May-June 2022
 link: "/publications/pdf/cofer2022secpriv.pdf"
 date: 2022-05-01 00:00:00
 projects: [CASE]
+tools: [AGREE, Resolute]
 ---
 
 <p>Formal methods tools that provide mathematical proof of system properties have
