--- a/publications/mercer2021models.html
+++ b/publications/mercer2021models.html
@@ -6,6 +6,7 @@ info: Model-Driven Engineering Languages and Systems (MODELS), October 2021
 link: "/publications/pdf/mercer2021MODELS.pdf"
 date: 2021-10-14 00:00:00
 projects: [CASE]
+tools: [AGREE, Resolute]
 ---
 
 <p>Cyber-physical systems, such as avionics, must be
