--- a/projects/hacms.html
+++ b/projects/hacms.html
@@ -16,7 +16,7 @@ archive: no
 
 <p>Current approaches to cyber security rely on patching systems after a vulnerability is discovered.  What is needed is a clean-slate, mathematically-based approach for building secure software.  DARPA initiated the <A href="http://www.darpa.mil/program/high-assurance-cyber-military-systems"> HACMS program (High Assurance Cyber Military Systems)</A> to develop the technologies needed to counter cyber threats to network-enabled embedded systems.  </p>
 
-<p>Rockwell Collins is leading the Secure Mathematically-Assured Composition of Control Models (SMACCM) project in the DARPA HACMS program. The SMACCM project is developing new tools for building UAV software that is provably secure against many classes of cyber attack.  Our goal is to provide not just security, but verifiable security; that is, system designs for which we can have confidence in and evidence of security.  We are developing system architecture models, software components for mission and control functions, and operating system software, all of which are mathematically analyzed to ensure key security properties.</p>
+<p>Collin Aerospace (Rockwell Collins at the time) led the Secure Mathematically-Assured Composition of Control Models (SMACCM) project in the DARPA HACMS program. The SMACCM project developed new tools for building UAV software that is provably secure against many classes of cyber attack.  Our goal in SMACCM was to provide not just security, but verifiable security; that is, system designs for which we can have confidence in and evidence of security.  We developed system architecture models, software components for mission and control functions, and operating system software, all of which have been mathematically analyzed to ensure key security properties.</p>
 
 <div style="float:right">
 <A href="/images/SMACCM-tools.pdf"><img src="/images/SMACCM-tools.png" /></A>
@@ -29,7 +29,7 @@ archive: no
 <li>High-assurance control components based on formal design languages and synthesis</li>
 </ul>
 
-<p>We are prototyping these new technologies on a research quadcopter, and then transitioning them to Boeing's Unmanned Little Bird (ULB) helicopter to demonstrate their practicality and effectiveness.  Our integrated tools for architectural modeling, analysis, and synthesis (shown in the figure) make this approach practical and effective.
+<p>We prototyped these new technologies on a research quadcopter, and then transitioned them to Boeing's Unmanned Little Bird (ULB) helicopter to demonstrate their practicality and effectiveness.  Our integrated tools for architectural modeling, analysis, and synthesis (shown in the figure) make this approach practical and effective.
 These tools for secure software development and analysis are available for transition to other vehicle programs (<A href="//loonwerks.com/tools/agree.html" target="_blank"> AGREE</A> and <A href="//loonwerks.com/tools/resolute.html" target="_blank"> Resolute</A>).  </p>
 
 <p>At the end of each phase of the project, the HACMS Red Team was given six weeks and full access to the source code for both vehicles to evaluate their cyber security claims.  They were unable to compromise the security of either vehicle. </p>
