--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ For additional information contact us at <A href="mailto:info@loonwerks.com">inf
 
 <div id="news" style="visibility: hidden">
 <h1>What's new</h1>
-<p>Collins Aerospace run-time assurance and formal methods technologies are at the heart of this DARPA Assurance Autonomy demonstration.  Check out  
+<p>Collins Aerospace run-time assurance and formal methods technologies are at the heart of this DARPA Assured Autonomy demonstration.  Check out  
 	<A href="https://lnkd.in/gxyzR_EH" target="_blank">this video </A>
 	produced by our colleagues at Boeing.
 </p>
