--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ Loonwerks is a collection of formal methods researchers associated with the Trus
 <h1>Work with us</h1>
 <p>
 Job &#8712 {FormalMethods &#8745 Airplanes} &#8658 Cool(Job) <br>
-Interested in joining the Trusted Systems team at Collins?  
+Interested in joining the Trusted Methods team at Collins?  
 <!--
 <A href="https://jobs.collinsaerospace.com/job/cedar-rapids/principal-trusted-systems-engineer/1738/11637012" target="_blank">Apply here.</A>
 <br />
