--- a/people/isaac-amundson.html
+++ b/people/isaac-amundson.html
@@ -4,7 +4,7 @@ fullname: Isaac Amundson
 sort: Amundson
 author_key: I. Amundson
 email: isaac.amundson@collins.com
-position: Senior Principal Trusted Systems Engineer
+position: Senior Principal Systems Engineer
 picture: /images/amundson.jpg
 location: minnesota
 ---
