--- a/publications/congliu2023nfm.html
+++ b/publications/congliu2023nfm.html
@@ -3,25 +3,20 @@ layout: publication
 authors: [C. Liu, D. Cofer, D. Osipychev]
 title: "Verifying an Aircraft Collision Avoidance Neural Network with Marabou"
 info: NASA Formal Methods Symposium, May 2023
-link: "https://arxiv.org/pdf/1603.02130"
-projects: [CVFCS]
-tools: [AGREE]
-date: 2016-06-07 00:00:00
+link: "/publications/pdf/congliu2023nfm.pdf"
+projects: [AAHAA]
+date: 2023-05-15 00:00:00
 ---
 
 <p>
-During the development and verification of complex airborne
-systems, a variety of languages and development environments are used
-for different levels of the system hierarchy. As a result, there may be
-manual steps to translate requirements between these different environments.
-This paper presents a tool-supported export technique that
-translates high-level requirements from the software architecture modeling
-environment into property observers that can be used for verification
-in the software component environment. This allows efficient verification
-that the component designs comply with their high-level requirements.
-It also provides an automated tool chain supporting formal verification
-from system requirements down to low-level software requirements that
-is consistent with certification guidance for avionics systems. The effectiveness
-of the technique has been evaluated and demonstrated on a
-medical infusion pump and an aircraft wheel braking system.
+In this case study, we have explored the use of a neural network
+model checker to analyze the safety characteristics of a neural network
+trained using reinforcement learning to compute collision avoidance
+flight plans for aircraft. We analyzed specific aircraft encounter geometries
+(e.g. head-on, overtake) and also examined robustness of the neural
+network. We verified the minimum horizontal separation property by
+identifying conditions where the neural network can potentially cause a
+transition from a safe state to an unsafe state. We show how the property
+verification problem is mathematically transformed and encoded as
+linear-constraints that can be analyzed by the Marabou model checker.
 </p>
