--- a/publications/cofer2023vision2045.html
+++ b/publications/cofer2023vision2045.html
@@ -2,7 +2,7 @@
 layout: publication
 authors: [G. Brat, H. Yu, E. Atkins, P. Sharma, D. Cofer, M. Durling, B. Meng, C. Alexander, S. Borgyos, C. Fan, K. Garg, U. Topcu, G. Bakirtzis]
 title: "Autonomy Verification and Validation Roadmap and Vision 2045"
-info: NASA Technical Report NASA/TM-20230003734
+info: NASA Technical Report NASA/TM-20230003734, January 2023
 link: "https://ntrs.nasa.gov/citations/20230003734"
 date: 2023-01-31 00:00:00
 projects: [AAHAA]
