--- a/publications/liu2023nfm.html
+++ b/publications/liu2023nfm.html
@@ -2,7 +2,7 @@
 layout: publication
 authors: [C. Liu, D. Cofer, D. Osipychev]
 title: "Verifying an Aircraft Collision Avoidance Neural Network with Marabou"
-info: NASA Formal Methods, 2023
+info: NASA Formal Methods Symposium, 2023
 link: "/publications/pdf/liu2023nfm.pdf"
 projects: [AAHAA]
 date: 2023-05-01 00:00:00
