--- a/people/david-hardin.html
+++ b/people/david-hardin.html
@@ -3,9 +3,9 @@ layout: person
 fullname: David Hardin
 sort: Hardin
 author_key: D. Hardin
-position: Principal Research Engineer
-picture: /images/hardin.jpg
-email: david.hardin@rockwellcollins.com
+position: Associate Director
+picture: /images/hardin.png
+email: david.hardin@collins.com
 location: iowa
 ---
 
