--- a/people/jennifer-davis.html
+++ b/people/jennifer-davis.html
@@ -3,7 +3,7 @@ layout: person
 fullname: Jennifer Davis
 sort: Davis
 author_key: J. Davis
-position: Principal Applied Mathematician
+position: Associate Director
 picture: /images/davis.jpg
 email: jen.davis@collins.com
 location: iowa
