--- a/people/junaid-babar.html
+++ b/people/junaid-babar.html
@@ -3,7 +3,7 @@ layout: person
 fullname: Junaid Babar
 sort: Babar
 author_key: J. Babar
-position: Senior Systems Engineer
+position: Principal Systems Engineer
 picture: /images/babar.jpg
 email: junaid.babar@collins.com
 location: iowa
