--- a/publications/wang2023sassur.html
+++ b/publications/wang2023sassur.html
@@ -1,6 +1,6 @@
 ---
 layout: publication
-authors: [T. Wang, C. Oh, M. Low, I. Amundson, Z. Daw, A. Pinto, M. Chiodo, G. Wang, S. Hassan, R. Melville, P. Nuzzo]
+authors: [T. Wang, C. Oh, M. Low, I. Amundson, Z. Daw, A. Pinto, M. Chiodo, G. Wang, S. Hasan, R. Melville, P. Nuzzo]
 title: "Computer-Aided Generation of Assurance Cases"
 info: 10th International Workshop on Next Generation of System Assurance Approaches for Critical Systems (SASSUR'23), 2023
 link: "/publications/pdf/wang2023sassur.pdf"
