--- a/publications/daw2023dasc_eval.html
+++ b/publications/daw2023dasc_eval.html
@@ -1,6 +1,6 @@
 ---
 layout: publication
-authors: [Z. Daw, T. Wang, C. Oh, M. Low, I. Amundson, G. Wang, S. Hasan, R. Melville, P. Nuzzo]
+authors: [Z. Daw, T. Wang, C. Oh, M. Low, I. Amundson, G. Wang, R. Melville, P. Nuzzo]
 title: "Computer-Aided Evaluation for Argument-Based Certification"
 info: 42nd AIAA/IEEE Digital Avionics Systems Conference (DASC), 2023
 link: "/publications/pdf/daw2023dasc_eval.pdf"
