--- a/publications/malaquias2023ada.html
+++ b/publications/malaquias2023ada.html
@@ -1,6 +1,6 @@
 ---
 layout: publication
-authors: [F. Malaquias, G Giantamidis, S Basagiannis, S. Rollini, I. Amundson]
+authors: [F. Malaquias, G Giantamidis, S Basagiannis, S. F. Rollini, I. Amundson]
 title: "Towards a Methodology to Design Provably Secure Cyber-physical Systems"
 info: Ada User Journal, Vol. 44(2), June 2023
 link: "/publications/pdf/malaquias2023ada.pdf"
