--- a/publications/narayan2023syscon.html
+++ b/publications/narayan2023syscon.html
@@ -3,7 +3,7 @@ layout: publication
 authors: [N. Narayan, P. Ganeriwala, R. Jones, M. Matessa, S. Bhattacharyya, J. Davis, H. Purohit, S. F. Rollini]
 title: "Assuring Learning-Enabled Increasingly Autonomous Systems"
 info:  IEEE International Systems Conference (SysCon), 2023
-link: 
+link: "/publications/pdf/narayan2023syscon.pdf"
 date: 2023-01-01 00:00:00
 ---
 
