--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ layout: default
 
 <h1>About us</h1>
 <p>
-Loonwerks is a collection of formal methods researchers associated with the Trusted Methods group in Collins Aerospace.  Our work is focused on the use of formal methods to create safe and secure avionics software.  We build tools that make the latest advances in automated analysis from the research community accessible to system and software developers in industry.  
+Loonwerks is a collection of 3 formal methods researchers associated with the Trusted Methods group in Collins Aerospace.  Our work is focused on the use of formal methods to create safe and secure avionics software.  We build tools that make the latest advances in automated analysis from the research community accessible to system and software developers in industry.  
 </p>
 
 <h1>Work with us</h1>
