Add Boeing demo video to aahaa.html

--- a/projects/aahaa.html
+++ b/projects/aahaa.html
@@ -28,6 +28,7 @@ archive: no
 <iframe width="720" height="300" src="https://www.youtube.com/embed/wkIpYM3CzbA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <p>Run-time assurance architecture maintains system safety in the presence of a defective LEC (aircraft stays on the runway):</p>
 <iframe width="720" height="300" src="https://www.youtube.com/embed/SfNDPb10InI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
+<p>The phase 3 demonstration is based on Boeing's conlict avoidance trajectory generation neural network.  We used a run-time assurance architecture to monitor the trajectory produced and predict whether there would be any violation of the "remain well clear" criteria relative to the intruder aircraft.  This Boeing video describes flight demonstrations with two aircraft flying a variety of encounter geometries to test the performance and safety of the solution.</p>
+<iframe width="560" height="315" src="https://onfirstup.com/embed/video/799b32c6-e43f-4a1a-a0c4-70e4d8ae322d" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen=""></iframe>
 
 
