--- a/publications/cofer2023formula.html
+++ b/publications/cofer2023formula.html
@@ -1,13 +1,13 @@
 ---
 layout: publication
-authors: [M. Baleani, A. Clavi\`ere, D. Cofer, E. DeWind, L. Di Guglielmo, O. Ferrante, G. Gentile, D. Kirov, D. Larsen, L. Mangeruca, S. Fulvio Rollini, G. Cima, R. Schneider, H. Semde, G. Soudain]
+authors: [M. Baleani, A. Clavi&egravere, D. Cofer, E. DeWind, L. Di Guglielmo, O. Ferrante, G. Gentile, D. Kirov, D. Larsen, L. Mangeruca, S. Fulvio Rollini, G. Cima, R. Schneider, H. Semde, G. Soudain]
 title: "Formal Methods use for Learning Assurance (ForMuLA)"
 info: EASA Innovation Partnership Contract, Final Report, April 2023
 link: "https://www.easa.europa.eu/en/downloads/137878/en"
 date: 2023-04-01 00:00:00
 projects: [AAHAA]
 ---
-<p>
+
 The aim of this report is to present the outcome of the collaboration between EASA and Collins Aerospace on an Innovation Partnership Contract (IPC) that investigated the use of formal methods as part of the learning assurance building block of the EASA AI Roadmap. The project ran from Oct 2021 to Mar 2023. The IPC project titled ``Formal Methods use for Learning Assurance'' (ForMuLA) focused on emphasizing opportunities for the adoption of formal methods techniques in the design assurance process of machine learning enabled systems. This resulted in the following key achievements:
 <ul>
 <li>Proposed use of formal methods as anticipated means of compliance for a set of key certification objectives from the EASA Concept Paper for Level 1 and 2 Machine Learning Applications. This supported the update of definitions in the concept paper and the clarification of objective LM-11 on learning algorithm and trained model stability, which has been split into objectives LM-11 and LM-12 in the transition to the new version of the concept paper.</li>
@@ -17,6 +17,6 @@ The aim of this report is to present the outcome of the collaboration between EA
 <li>Practical demonstration of the use of formal methods on an industrial use case of a deep learning-based estimator for remaining useful life of mechanical bearings in airborne equipment. The output of the estimator is used for on-ground maintenance applications. Demonstrations provided concrete evidence of how FM and supporting statistical techniques can be used as part of the verification activities to deal with data quality assessment, ML stability, robustness and intended behavior verification. </li>
 </ul>
 The considerations summarized in the report apply to machine learning in general, but particular emphasis has been placed on specific challenges related to neural networks. Discussion of formal methods applications are purposefully kept generic. This report does not recommend specific methods or tools, but is rather intended to motivate opportunities from a theoretical perspective. Where applicable, a reference is made to concrete methods and tools.
-<\p>
+
 
 
