--- a/publications/cofer2023formula.html
+++ b/publications/cofer2023formula.html
@@ -1,6 +1,6 @@
 ---
 layout: publication
-authors: [M. Baleani, A. Clavi&egravere, D. Cofer, E. DeWind, L. Di Guglielmo, O. Ferrante, G. Gentile, D. Kirov, D. Larsen, L. Mangeruca, S. Fulvio Rollini, G. Cima, R. Schneider, H. Semde, G. Soudain]
+authors: [M. Baleani, A. Clavi&#232re, D. Cofer, E. DeWind, L. Di Guglielmo, O. Ferrante, G. Gentile, D. Kirov, D. Larsen, L. Mangeruca, S. Fulvio Rollini, G. Cima, R. Schneider, H. Semde, G. Soudain]
 title: "Formal Methods use for Learning Assurance (ForMuLA)"
 info: EASA Innovation Partnership Contract, Final Report, April 2023
 link: "https://www.easa.europa.eu/en/downloads/137878/en"
