--- a/people/david-hardin.html
+++ b/people/david-hardin.html
@@ -10,29 +10,8 @@ location: iowa
 ---
 
 
-<p>David S. Hardin has made contributions in the areas of formal methods, 
-computer architecture for High Assurance systems, as well as real-time and 
-embedded Java. He is currently a Principal Engineer in the Advanced Technology 
-Center at Rockwell Collins, where he has served as Principal Investigator for 
-several U.S. DoD Research and Development programs. His most recent program 
-developed Guardol, a domain-specific language for cross-domain systems 
-with integral formal property verification capability, as well as the ability 
-to produce extremely high speed hardware-based guards.</p>
+<p>David S. Hardin has made contributions in the areas of formal methods, computer architecture for High Assurance systems, as well as memory-safe programming languages. He is currently Chief Technologist for Trusted Methods in the Applied Research and Technology organization at Collins Aerospace, where he has served as Principal Investigator or Researcher for several U.S. DoD Research and Development programs. He most recently contributed to the DARPA Cyber-Assured Systems Engineering program (CASE).
 
-<p>He is the editor of the book <i>Design and Verification of Microprocessor 
-Systems for High-Assurance Applications</i> (Springer 2010), and a co-author 
-of <i>The Real-Time Specification for Java</i>, as well as the Java 2 Micro 
-Edition Connected Device Configuration/Foundation Profile standards. He is 
-author or co-author of more than 40 peer-reviewed publications, and is a 
-co-inventor on 12 U.S. patents. In 1999, Dr. Hardin co-founded aJile Systems, 
-a startup company focused on real-time and embedded Java technology, and 
-served as aJile's Chief Technical Officer from 1999 to 2003.</p>
-
-<p>Dr. Hardin was selected as a Rockwell Engineer of the Year for 1997 for
-his contributions to the development of the world's first Java microprocessor.
-His academic career includes BSEE and MSEE degrees from the University of
-Kentucky, and a Ph.D. in Electrical and Computer Engineering from Kansas State
-University, in 1989. Dr. Hardin is a proud native of the Commonwealth of 
-Kentucky, and is a Kentucky Colonel.</p>
-
-
+He is the editor of the book Design and Verification of Microprocessor Systems for High-Assurance Applications (Springer 2010), and a co-author of The Real-Time Specification for Java. He is author or co-author of more than 75 peer-reviewed publications, and is an inventor or co-inventor on 15 U.S. patents. In 1999, Dr. Hardin co-founded aJile Systems, a startup company focused on real-time and embedded Java technology, and served as aJile's Chief Technical Officer from 1999 to 2003.
+Dr. Hardin was selected as a Rockwell Engineer of the Year for 1997 for his contributions to the development of the world's first Java microprocessor. His academic career includes BSEE and MSEE degrees from the University of Kentucky, and a Ph.D. in Electrical and Computer Engineering from Kansas State University, in 1989. Dr. Hardin is a proud native of the Commonwealth of Kentucky, and is a Kentucky Colonel.
+</p>
