--- a/publications/hasan2024aeic.html
+++ b/publications/hasan2024aeic.html
@@ -2,7 +2,7 @@
 layout: publication
 authors: [S. Hasan, I. Amundson, D. Hardin]
 title: "Zero-Trust Design and Assurance Patterns for Cyber-Physical Systems"
-info: SAE AeroTech, June 2024
+info: 28th Ada-Europe International Conference on Reliable Software Technologies, June 2024
 link: "/publications/pdf/hasan2024aeic.pdf"
 date: 2024-06-10 00:00:00
 ---
