--- a/people/david-greve.html
+++ b/people/david-greve.html
@@ -6,7 +6,7 @@ author_key: D. Greve
 position: Associate Director Engineer
 picture: /images/greve.png
 email: david.greve@collins.com
-location: iowa
+location: alumni
 ---
 
 <p>
