--- a/people/isaac-amundson.html
+++ b/people/isaac-amundson.html
@@ -4,13 +4,13 @@ fullname: Isaac Amundson
 sort: Amundson
 author_key: I. Amundson
 email: isaac.amundson@collins.com
-position: Senior Principal Trusted Systems Engineer
+position: Fellow
 picture: /images/amundson.jpg
 location: minnesota
 ---
 
-<p>Isaac Amundson is a research engineer on the Trusted Methods team in the Applied Research & Technology organization at Collins Aerospace.  He has over 15 years of academic and industry experience in safety-critical cyber-physical systems research and development across medical, high-voltage power, agriculture and off-road construction machinery, commercial vehicle and aerospace domains, and has first-hand knowledge of the challenges, roadblocks, and pitfalls involved in certifying products in these highly-regulated environments.</p>
+<p>Isaac Amundson is a Technical Fellow with the Trusted Methods group in the Applied Research & Technology organization at Collins Aerospace.  He has over 20 years of academic and industry experience in safety-critical cyber-physical systems research and development across medical, high-voltage power, agriculture and off-road construction machinery, commercial vehicle and aerospace domains, and has first-hand knowledge of the challenges, roadblocks, and pitfalls involved in certifying products in these highly-regulated environments.</p>
 <p>Dr. Amundson received MS degrees in Mechanical Engineering (2004) and Computer Science (2006), and his PhD in Computer Science (2010), all from Vanderbilt University.  In addition, he received Functional Safety engineer certification from T&#220;V Rheinland in 2017.</p>
-<p>Dr. Amundson has a strong background in systems engineering best practices, including model-based development and formal methods, and has led the design and implementation of multiple model-based development tools and toolchains for providing inherent dependability in high-assurance systems.
-In his current role, he participates on multiple government-sponsored (mostly DARPA) research programs in which he is exploring practical methods for generating and conveying assurance through the use of new and existing formal analysis tools, including the Collins Aerospace AGREE, Resolute, and BriefCASE tools.</p>
+<p>Dr. Amundson has a strong background in systems engineering best practices, including model-based engineering, formal methods, and other assurance technologies, and he has led the design and implementation of multiple model-based development tools and toolchains for providing inherent dependability in high-assurance systems.
+In his current role, he leads multiple government-sponsored (DARPA, NASA) research programs in which he is exploring practical methods for generating and conveying assurance through the use of new and existing formal analysis tools, including the Collins Aerospace AGREE, Resolute, and BriefCASE tools.</p>
 
