--- a/projects/inspecta.html
+++ b/projects/inspecta.html
@@ -43,7 +43,7 @@ tools.</li>
 researchers, including other specification languages, other source code languages, and
 other operating system targets.</li>
 <li> Our access to critical defense and aerospace products in both commercial and military
-domains served by Collins will serve as the basis for compelling demonstrations of INSPECTA
+domains served by Collins will provide the basis for compelling demonstrations of INSPECTA
 technologies.</li>
 </ol>
 
