--- a/projects/inspecta.html
+++ b/projects/inspecta.html
@@ -19,7 +19,7 @@ integrated into currently used software development pipelines, enabling a contin
 while maintaining high assurance.</p>
 
 <p>Collins Aerospace, Carnegie Mellon University (CMU), Kansas State University (KSU), University
-of Kansas (KU), Proofcraft, University of New South Wales Sydney (UNSW), and DornerWorks
+of Kansas (KU), Proofcraft, UNSW Sydney, and DornerWorks
 have teamed to address the challenges posed by the DARPA PROVERS program, which kicked off in March 2024. 
 Our technical plan for INSPECTA is distinguished by the following characteristics:
 <ol>
