add tools figure

--- a/projects/inspecta.html
+++ b/projects/inspecta.html
@@ -47,6 +47,10 @@ domains served by Collins will provide the basis for compelling demonstrations o
 technologies.</li>
 </ol>
 
+<div id="inspecta-tools">
+<img src="/images/inspecta-tools.png" />
+</div>
+
 <p>Tools being developed on the INSPECTA project are open-source and will be available on GitHub (stay tuned).  
 </p>
 
