--- a/publications/amundson2024dasc.html
+++ b/publications/amundson2024dasc.html
@@ -2,7 +2,7 @@
 layout: publication
 authors: [I. Amundson, D. Cofer, D. Hardin, J. Hatcliff]
 title: "Hierarchical Assurance Patterns for Cyber-Resilient Systems Engineering"
-info: Digital Avionics Systems Conference (DASC 2024), October 2024
+info: 43rd Digital Avionics Systems Conference (DASC 2024), October 2024
 link: "/publications/pdf/amundson2024dasc.pdf"
 date: 2024-10-01 00:00:00
 projects: [CASE]
