--- a/publications/amundson2024ersa.html
+++ b/publications/amundson2024ersa.html
@@ -2,7 +2,7 @@
 layout: publication
 authors: [I. Amundson, A. Tahat, D. Hardin, D. Cofer]
 title: "Towards Explainable Compositional Reasoning"
-info: 3rd International Workshop on Explainability of Real-time Systems and their Analysis (ERSA)
+info: 3rd International Workshop on Explainability of Real-time Systems and their Analysis (ERSA), December 2024
 link: "/publications/pdf/amundson2024ersa.pdf"
 date: 2024-12-10 00:00:00
 projects: [PROVERS]
