--- a/publications/liu2024dasc.html
+++ b/publications/liu2024dasc.html
@@ -2,7 +2,7 @@
 layout: publication
 authors: [C. Liu, H. Herencia-Zapana, S. Hasan, A. Tahat, I. Amundson, D. Cofer]
 title: "Evaluation of New Assurance Tools for Airborne Machine Learning-Based Functions"
-info: Digital Avionics Systems Conference, 2024
+info: 43rd Digital Avionics Systems Conference, October 2024
 link: "/publications/pdf/liu2024dasc.pdf"
 projects: [AAHAA]
 date: 2024-10-01 00:00:00
