change project to INSPECTA

--- a/publications/amundson2024ersa.html
+++ b/publications/amundson2024ersa.html
@@ -5,7 +5,7 @@ title: "Towards Explainable Compositional Reasoning"
 info: 3rd International Workshop on Explainability of Real-time Systems and their Analysis (ERSA), December 2024
 link: "/publications/pdf/amundson2024ersa.pdf"
 date: 2024-12-10 00:00:00
-projects: [PROVERS]
+projects: [INSPECTA]
 ---
 
 Formal verification tools such as model checkers have been around for decades. Unfortunately, despite their ability to prove that mission-critical properties are satisfied in both design and implementation, the aerospace and defense industry is still not seeing widespread adoption of these powerful technologies. Among the various reasons for slow uptake, difficulty in understanding analysis results (i.e., counterexamples) tops the list of multiple surveys. In previous work, our team developed AGREE, an assume-guarantee compositional reasoning tool for architecture models. Like many other model checkers, AGREE generates potentially large counterexamples in a tabular format containing variable values at each time step of program execution up to the property violation, which can be difficult to interpret, especially for novice formal methods users. In this paper, we present our approach for achieving explainable compositional reasoning using AGREE in combination with generative AI. Our preliminary results indicate this technique works surprisingly well, and have encouraged us to expand this approach to other areas in explainable proof engineering.
