--- a/publications/cofer2024hcss.html
+++ b/publications/cofer2024hcss.html
@@ -2,7 +2,7 @@
 layout: publication
 authors: [D. Cofer]
 title: "Industrial Scale Proof Engineering for Critical Trustworthy Applications (INSPECTA)"
-info: High Confidence Systems and Software Conference, May 2024 (Keynote Presentation)
+info: High Confidence Systems and Software Conference, May 2024
 link: "/publications/pdf/cofer2024hcss.pdf"
 date: 2024-05-06 00:00:00
 projects: [INSPECTA]
