--- a/projects/aahaa.html
+++ b/projects/aahaa.html
@@ -10,7 +10,7 @@ archive: no
 
 <p>Focusing on the aviation context, there are serious barriers to the deployment of autonomous aircraft, both in the military and in the National Airspace System (NAS).  Current civil aviation certification processes are based on the idea that the correct behavior of a system or a component must be completely specified and verified prior to operation. Military aircraft acquisition processes make reference to civil certification processes and limitations.  These barriers will delay or prevent the deployment of crucial safety functions and new capabilities that could be of great value in both military and civilian applications. </p>
 
-<p>Collins Aerospace, Stanford University, Kestrel Institute, and University of Minnesota have teamed on DARPA's Assured Autonomy program to create new technologies for ensuring the safety of LECs in autonomous vehicle applications.  These technologies include:
+<p>Collins Aerospace, Stanford University, Kestrel Institute, and University of Minnesota teamed on DARPA's Assured Autonomy program to create new technologies for ensuring the safety of learning-enabled components (LECs) in autonomous vehicle applications.  These technologies include:
 <ul>
 <li>Architecture-driven assurance based on compositional reasoning about formally specified contracts for system components, including LECs </li>
 <li>New formal verification methods that enable precise reasoning about LECs </li>
@@ -21,9 +21,9 @@ archive: no
 <li>Assurance-optimized system test generation informed by analysis results </li>
 </ul></p>
 
-<p>Models and code for the project are available on <a href="https://github.com/loonwerks/AAHAA" target="_blank">github</a>. </p>
+<p>Models and code from the project are available on <a href="https://github.com/loonwerks/AAHAA" target="_blank">github</a>. </p>
 
-<p>The phase 1 project demonstration implemented a run-time assurance architecture based on the Boeing Deep Taxi autonomy platform.  The videos below show the impact of a learning component with a simulated defect, and the effectiveness of the run-time monitoring system to intervene and maintain system safety.</p>
+<p>The phase 1 project demonstration implemented a run-time assurance architecture based on the Boeing Deep Taxi autonomy platform.  The videos below show the impact of a learning-enabled component with a simulated defect, and the effectiveness of the run-time monitoring system to intervene and maintain system safety.</p>
 <p>Defective LEC causes aircraft to depart from the runway:</p>
 <iframe width="720" height="300" src="https://www.youtube.com/embed/wkIpYM3CzbA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <p>Run-time assurance architecture maintains system safety in the presence of a defective LEC (aircraft stays on the runway):</p>
