Adding Lucas back in

--- a/people/lucas-wagner.html
+++ b/people/lucas-wagner.html
@@ -3,10 +3,10 @@ layout: person
 fullname: Lucas Wagner
 sort: Wagner
 author_key: L. Wagner
-position: Principal Research Scientist
+position: Associate Director
 picture: /images/wagner.jpg
-email: lucas.wagner@rockwellcollins.com
-location: alumni
+email: lucas.wagner@collins.com
+location: iowa
 ---
 
-Lucas Wagner is a Principal Research Scientist within Rockwell Collins’ Advanced Technology Center. His area of expertise is applying formal analysis techniques, particularly model checking, to industrial problems. Mr. Wagner’s background includes developing methods and tools to facilitate the use of formal methods into industrial development processes, the certification of avionics software using model checking, and the qualification of formal methods tools. He has served as the principal investigator on NASA- and AFRL-sponsored efforts to develop and mature formal methods technologies to improve their usage within the avionics community. Mr. Wagner is also the lead developer of the SpeAR tool which is designed to aid in the development, verification, validation, and certification of software requirements according to the guidelines set forth in DO-178C.
+Lucas Wagner is an Associate Director in the Applied Research & Technology (ART) organization at Collins Aerospace. His area of expertise is applying formal analysis techniques, particularly model checking, to industrial problems. Mr. Wagner’s background includes developing methods and tools to facilitate the use of formal methods into industrial development processes, the certification of avionics software using model checking, and the qualification of formal methods tools. He has served as the principal investigator on NASA- and AFRL-sponsored efforts to develop and mature formal methods technologies to improve their usage within the avionics community. Mr. Wagner is also the lead developer of the SpeAR tool which is designed to aid in the development, verification, validation, and certification of software requirements according to the guidelines set forth in DO-178C.
