--- a/people/lucas-wagner.html
+++ b/people/lucas-wagner.html
@@ -5,7 +5,7 @@ sort: Wagner
 author_key: L. Wagner
 position: Associate Director
 picture: /images/wagner.jpg
-email: lucas.wagner@collins.com
+email: lucas.g.wagner@collins.com
 location: iowa
 ---
 
