--- a/publications/herencia-zapana2025xrsecurity.html
+++ b/publications/herencia-zapana2025xrsecurity.html
@@ -2,7 +2,7 @@
 layout: publication
 authors: [H. Herencia-Zapana, I. Amundson]
 title: "A Repository of Cognitive Attack Patterns for Extended-Reality Systems"
-info: First Workshop on Enhancing Security, Privacy, and Trust in Extended Reality (XR) Systems
+info: First Workshop on Enhancing Security, Privacy, and Trust in Extended Reality (XR) Systems, October 2025
 link: "/publications/pdf/herencia-zapana2025xrsecurity.pdf"
 date: 2025-10-30 00:00:00
 projects: [MATRICS]
